--- a/styles.css
+++ b/styles.css
@@ -125,13 +125,51 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: linear-gradient(to bottom right, #506D8F, #AEB1BA);
     z-index: 2;
     opacity: 0;
     visibility: hidden;
+    overflow-y: auto;
+    overflow-x: hidden; 
+    scroll-behavior: smooth; 
     transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}
+
+#scroll-container {
+    width: 100%;
+    height: 100vh; 
+    overflow-y: auto; 
+    overflow-x: hidden; 
+    scroll-behavior: smooth;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.scroll-content {
+    max-width: 800px; 
+    margin: 0 auto;
+    padding: 20px;
+}
+
+#scroll-container::-webkit-scrollbar {
+    width: 8px;
+}
+
+#scroll-container::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+#scroll-container::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+#scroll-container::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 #container-1 {
@@ -139,18 +177,14 @@ body {
     background-color: rgba(255, 255, 255, 0.3); 
     border-radius: 10px; 
     padding: 30px 40px; 
-    max-width: 900px; 
-    height: 80%;
+    height: 70%;
     width: 70%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
     display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
 }
 
 .moodboard-image {
@@ -158,12 +192,16 @@ body {
     width: 100%;
     height: auto;
     border-radius: 5px;
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #container-1 h1 {
     font-family: "Seashore"; 
     text-align: center;
-    font-size: 4em;
+    font-size: 4.5em;
     font-weight: bold;
     color: #000000;
     margin-bottom: 20px;
@@ -186,31 +224,6 @@ body {
     font-style: normal;
 }
 
-#container-1 button {
-    padding: 15px 30px;
-    background-color: #444B51;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 28px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: 30px;
-    font-family: 'CustomButtonFont', sans-serif;
-}
-
-#container-1 button:hover {
-    background-color: #506D8F;
-}
-
-#container-1 button:active {
-    background-color: #004080;
-}
-
-#container-1 button:disabled {
-    background-color: #4e4e4e;
-    cursor: not-allowed;
-}
 
 .hidden {
     display: none;
@@ -218,6 +231,9 @@ body {
 }
 
 #container-2 {
+    opacity: 0;
+    transform: translateY(50px); 
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     width: 70%;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -228,16 +244,28 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
+    margin-bottom: 80px;
+}
+
+#container-2 button {
+    background-color: #1E3147;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-family: 'CustomButtonFont', sans-serif;
+}
+
+#container-2 button:hover {
+    background-color: #444B51;
 }
 
 #container-2 h1 {
     font-family: "Seashore";
-    font-size: 3em;
+    font-size: 3.5em;
     font-weight: bold;
     color: #ffffff;
     margin-bottom: 20px;
@@ -255,48 +283,8 @@ body {
     margin-right: -20px;
 }
 
-#container-2 button {
-    padding: 15px 30px;
-    background-color: #1E3147;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: 'CustomButtonFont', sans-serif;
-}
-
-#container-2 button:hover {
-    background-color: #444B51;
-}
-
-.slide-left {
-    animation: 1s slide-left;
-  }
-  @keyframes slide-left {
-    from {
-      margin-left: 100%;
-    }
-    to {
-      margin-left: 0%;
-    }
-  }
-
-  .slide-out {
-    animation: 1s slide-out;
-  }
-  @keyframes slide-out {
-    from {
-      margin-left: 0%;
-    }
-    to {
-      margin-left: -100%;
-    }
-  }
-
 .spotify-button {
-    display: inline-block;
+    display: flow-root;
     margin-top: 20px;
     padding: 10px 20px;
     background-color: rgba(0, 0, 0, 0.6);
@@ -320,7 +308,10 @@ body {
     outline-offset: 2px;
   }  
 
-  #container-0 {
+#container-0 {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     width: 70%;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -331,16 +322,13 @@ body {
     text-align: center;
     justify-content: center; 
     align-items: center;
-    display: flex;
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 #container-0 h1 {
     font-family: "Seashore";
-    font-size: 5.5em;
+    font-size: 5em;
     font-weight: bold;
     color: #ffffff;
     margin-bottom: 20px;
@@ -371,7 +359,7 @@ body {
 
 #container-0 h4 {
     font-family: 'Times New Roman', serif;
-    font-size: 1em;
+    font-size: 0.9em;
     color: #ffffff;
     margin-bottom: -10px;
     line-height: 1;
@@ -381,47 +369,11 @@ body {
     text-decoration: underline;
 }
 
-#container-0 button {
-    padding: 15px 30px;
-    background-color: #1E3147;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: 'CustomButtonFont', sans-serif;
-}
-
-#container-0 button:hover {
-    background-color: #444B51;
-}
-
-.slide-left {
-    animation: 1s slide-left;
-  }
-  @keyframes slide-left {
-    from {
-      margin-left: 100%;
-    }
-    to {
-      margin-left: 0%;
-    }
-  }
-
-  .slide-out {
-    animation: 1s slide-out;
-  }
-  @keyframes slide-out {
-    from {
-      margin-left: 0%;
-    }
-    to {
-      margin-left: -100%;
-    }
-  }
 
   #container-3 {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     width: 70%;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -432,16 +384,14 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    display: flex;
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 #container-3 h1 {
     font-family: "Seashore";
-    font-size: 5.5em;
+    font-size: 5em;
+    text-align: center;
     font-weight: bold;
     color: #ffffff;
     margin-bottom: 20px;
@@ -459,47 +409,10 @@ body {
     margin-right: -20px;
 }
 
-#container-3 button {
-    padding: 15px 30px;
-    background-color: #1E3147;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: 'CustomButtonFont', sans-serif;
-}
-
-#container-3 button:hover {
-    background-color: #444B51;
-}
-
-.slide-left {
-    animation: 1s slide-left;
-  }
-  @keyframes slide-left {
-    from {
-      margin-left: 100%;
-    }
-    to {
-      margin-left: 0%;
-    }
-  }
-
-  .slide-out {
-    animation: 1s slide-out;
-  }
-  @keyframes slide-out {
-    from {
-      margin-left: 0%;
-    }
-    to {
-      margin-left: -100%;
-    }
-  }
-
   #container-4 {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     width: 70%;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -510,11 +423,8 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center; 
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%; 
-    transform: translate(-50%, -50%);
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 #container-4 h1 {
@@ -548,47 +458,10 @@ body {
     margin-right: -20px;
 }
 
-#container-4 button {
-    padding: 15px 30px;
-    background-color: #1E3147;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: 'CustomButtonFont', sans-serif;
-}
-
-#container-4 button:hover {
-    background-color: #444B51;
-}
-
-.slide-left {
-    animation: 1s slide-left;
-  }
-  @keyframes slide-left {
-    from {
-      margin-left: 100%;
-    }
-    to {
-      margin-left: 0%;
-    }
-  }
-
-  .slide-out {
-    animation: 1s slide-out;
-  }
-  @keyframes slide-out {
-    from {
-      margin-left: 0%;
-    }
-    to {
-      margin-left: -100%;
-    }
-  }
-
   #container-5 {
+    opacity: 0; 
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     width: 70%;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -599,11 +472,8 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%; 
-    transform: translate(-50%, -50%);
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 #container-5 h1 {
@@ -649,67 +519,26 @@ body {
     text-decoration: underline;
 }
 
-#container-5 button {
-    padding: 15px 30px;
-    background-color: #1E3147;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: 'CustomButtonFont', sans-serif;
-}
-
-#container-5 button:hover {
-    background-color: #444B51;
-}
-
-.slide-left {
-    animation: 1s slide-left;
-  }
-  @keyframes slide-left {
-    from {
-      margin-left: 100%;
-    }
-    to {
-      margin-left: 0%;
-    }
-  }
-
-  .slide-out {
-    animation: 1s slide-out;
-  }
-  @keyframes slide-out {
-    from {
-      margin-left: 0%;
-    }
-    to {
-      margin-left: -100%;
-    }
-  }
-
   #container-6 {
-    width: 70%;
+    opacity: 0; /* Initially hidden */
+    transform: translateY(50px); /* Move down */
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    width: 80%;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    padding: 40px 60px;
+    padding: 40px 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    max-width: 60%;
-    max-height: 80%;
+    max-width: 90%;
     text-align: center;
     justify-content: center;
     align-items: center;
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%; 
-    transform: translate(-50%, -50%);
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 #container-6 h1 {
     font-family: "Seashore";
-    font-size: 3em;
+    font-size: 4.5em;
     font-weight: bold;
     color: #ffffff;
     margin-bottom: 20px;
@@ -723,68 +552,23 @@ body {
     margin-bottom: 20px;
     line-height: 1.5;
     text-align: justify;
-    margin-left: 10px;
-
 }
 
-#container-6 button {
-    padding: 15px 30px;
-    background-color: #1E3147;
-    border: none;
+.tellonym-button {
+    display: flow-root;
+    max-width: 70%;
+    background: rgba(255, 255, 255, 0.2);
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
     border-radius: 5px;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: 'CustomButtonFont', sans-serif;
+    margin: auto;
+    font-size: 16px;
+    
+    transition: background 0.3s ease;
 }
-
-#container-6 button:hover {
-    background-color: #444B51;
-}
-
-.slide-left {
-    animation: 1s slide-left;
-  }
-  @keyframes slide-left {
-    from {
-      margin-left: 100%;
-    }
-    to {
-      margin-left: 0%;
-    }
-  }
-
-  .slide-out {
-    animation: 1s slide-out;
-  }
-  @keyframes slide-out {
-    from {
-      margin-left: 0%;
-    }
-    to {
-      margin-left: -100%;
-    }
-  }
-
-  #container-6 .scroll-content {
-    max-height: 55vh; /* Limits height to fit within the container */
-    overflow-y: auto; /* Enables vertical scrolling */
-    padding-right: 5px; /* Prevents text from hitting the scrollbar */
-}
-
-/* Custom scrollbar (optional, for better aesthetics) */
-#container-6 .scroll-content::-webkit-scrollbar {
-    width: 5px;
-}
-
-#container-6 .scroll-content::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-}
-
-#container-6 .scroll-content::-webkit-scrollbar-track {
-    background: rgba(255, 255, 255, 0.1);
+.tellonym-button:hover {
+    background: rgba(249, 72, 72, 0.5);
 }
 
 #app {
@@ -968,4 +752,17 @@ body.light-mode #mode-toggle span {
     padding: 5px 5px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#scroll-indicator {
+    position: absolute;
+    bottom: 10px;
+    left: 90%;
+    transform: translateX(-50%);
+    font-size: 14px;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: opacity 0.3s ease-in-out;
 }
